# HwaSimIR

./: .gitattributes  .gitignore  README.md
ConsoleApplication1_LLA/: ConsoleApplication1.sln
ConsoleApplication1_LLA/ConsoleApplication1/: CMakeLists.txt  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  GeoTransform - 副本 (2).cpp  GeoTransform - 副本 (2).h  GeoTransform.h  GeoTransform_姿态补偿.cpp  GeoTransform_姿态补偿.h  HwaSimIR.cpp  HwaSimIR.h  IRSimulation.cpp  IRSimulation.h  TcpCommThread.cpp  TcpCommThread.h  TcpCommThread_Linux.cpp  TcpCommThread_Linux.h  UdpCommThread.h  UdpCommThread_Linux.cpp  UdpCommThread_Linux.h  common_data.h  math_algorithm.h
ConsoleApplication1_LLA/ConsoleApplication1/Annotation/: AnnotationConfig.cpp  AnnotationConfig.h  AnnotationManager.cpp  AnnotationOverlay.h  AnnotationProjector.cpp  AnnotationProjector.h  AnnotationTypes.h
ConsoleApplication1_LLA/ConsoleApplication1/Common/: CommonDefine.h
ConsoleApplication1_LLA/ConsoleApplication1/IR/: IRConfig.cpp  IRConfig.h  IRRuntimeConfig.cpp  IRSceneMaterialMapper.h  IRSensorModel.cpp  IRSensorModel.h  IRSensorPostProcess.cpp  IRSensorPostProcess.h  IRTemperatureModel.cpp  IRTemperatureModel.h  IRTypes.cpp  IRTypes.h  IRWeatherEffects.cpp  IRWeatherEffects.h
DataDrivenTestQT/: 1.csv  CommonData.h  DataDrivenTestQT.pro  NetworkConfig.ini  main.cpp  mainwindow.cpp  mainwindow.h
HwaSim_IR/: HwaSim_IR.sln
HwaSim_IR/HwaSim_IR/: AttitudeTransform.cpp  AttitudeTransform.h  CMakeLists.txt  GeoTransform.cpp  HwaSimIR.cpp  HwaSimIR.h  HwaSim_IR.vcxproj  HwaSim_IR.vcxproj.filters  IRSimulation.cpp  ReadMe.txt  TcpCommThread.cpp  TcpCommThread.h  TcpCommThread_Linux.cpp  TcpCommThread_Linux.h  UdpCommThread.cpp  UdpCommThread.h  UdpCommThread_Linux.cpp  UdpCommThread_Linux.h  main.cpp  stdafx.cpp
HwaSim_IR/HwaSim_IR/Annotation/: AnnotationManager.cpp  AnnotationManager.h  AnnotationOverlay.cpp  AnnotationProjector.cpp  AnnotationProjector.h
HwaSim_IR/HwaSim_IR/Common/: CommonData.h
HwaSim_IR/HwaSim_IR/IR/: IRAeroThermalModel.cpp  IRAeroThermalModel.h  IREnginePlumeModel.cpp  IREnginePlumeModel.h  IRModtranRadianceLut.cpp  IRModtranRadianceLut.h  IRModtranTauLut.cpp  IRModtranTauLut.h  IRPerfStats.cpp  IRPerfStats.h  IRRadianceModelV2.cpp  IRRadianceModelV2.h  IRRuntimeConfig.h  IRSceneMaterialMapper.cpp  IRTypes.h
HwaSim_IR_VideoDisplay/: CLAUDE.md  HwaSim_IR_VideoDisplay.sln  功能.txt
MaterialTest/: MaterialTest.sln
docs/: Codex_Phase1_Sync60_Perf_Prompt.md  HwaSimIR_AnnotationModuleDesign.md  HwaSimIR_HeadlessOffscreen_Implementation_Plan.md  HwaSimIR_IR_Architecture_Refactor_Plan.md  HwaSimIR_InfraredSimulationFramework.md  HwaSimIR_MODTRAN_Codex_Generation_Plan.md  HwaSimIR_MODTRAN_NIR_MWIR_Priority_Plan.md  HwaSimIR_env.md  modtran_cpp_tau_only_loader_plan.md  modtran_lut_format.md  modtran_pcmodwin5_aerosol_template_review.md  runbook_windows.md  sensorwave_config_usage.md  stage3_modtran_tooling_inventory.md  stage4_hotspot_brightspot_plan.md  stage5_min_radiance_plan.md
materials/: MaterialDatabase.csv  MaterialDatabase_example.csv
temperatures/: 1.新版_太阳位置计算表格.xlsx  Temperatures_Yemen_Summer.csv
tools/: build_current.ps1  build_env.ps1  phase1_sync_perf_smoke.ps1  phase1d_codec_ab_smoke.ps1  phase2a_sync60_save_smoke.ps1  phase3b_fix_manual_equiv_smoke.ps1  phase4a_aero_ab_smoke.ps1  phase4b_aero_runtime_speed_ab.ps1  phase4b_udp_speed_chain_smoke.ps1  phase4c_aero_mach_protocol_ab.ps1  phase5a_sensor_input_ab.ps1  phase5b_sensor_display_calib.ps1  phase6a_mtf_blur_ab.ps1  phase6b_agc_ab.ps1  phase6c_detector_noise_ab.ps1  phase6d_visual_combo_acceptance.ps1  phase7a_h264_realtime_smoke.ps1  phase_h3_headless_perf_ab.ps1  phase_h4_rk3588_perf_triage.ps1  run_modtran_cases.ps1  runtime_config_check.ps1  (+36 more)
(+118 files in other folders)
